--- a/ConorFoxWebsite/ConorFoxWebsite/Views/Home/Timetable.cshtml
+++ b/ConorFoxWebsite/ConorFoxWebsite/Views/Home/Timetable.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "My Timetable";
 }
-
+<br />
 <h2>My Timetable</h2>
 <p>
      
