--- a/ConorFoxWebsite/ConorFoxWebsite/Views/Account/Administration.cshtml
+++ b/ConorFoxWebsite/ConorFoxWebsite/Views/Account/Administration.cshtml
@@ -1,20 +1,25 @@
 ﻿@model ConorFoxWebsite.Models.LogOnModel
 
 @{
-    ViewBag.Title = "Log On";
+    ViewBag.Title = "Administration Log On";
 }
 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+<script type="text/javascript">
 
+    $("li").removeClass("active");
+    $("#administrationMenu").addClass("active");
+   
+</script>
 
 @Html.ValidationSummary(true, "Login was unsuccessful. Please correct the errors and try again.")
 
 @using (Html.BeginForm()) {
 <div class="container">
-    <h2>Log On</h2>
+    <h2>Administration Log On</h2>
     <p>
-      Please enter your user name and password. @Html.ActionLink("Register", "Register") if you don't have an account.
+      Please enter your user name and password. If you don't have an account pleae contact your system adminstrator.
    </p>
 </div>
         <br />
@@ -40,13 +45,7 @@
                 @Html.PasswordFor(m => m.Password)
                 @Html.ValidationMessageFor(m => m.Password)</div>
         </div>
-           
-
-            <div class="checkbox">
-                @Html.CheckBoxFor(m => m.RememberMe)
-                @Html.LabelFor(m => m.RememberMe)
-            </div>
-
+<br />
             <p>
                 <input type="submit" value="Log On" />
             </p>
