--- a/ConorFoxWebsite/ConorFoxWebsite/Views/Account/Register.cshtml
+++ b/ConorFoxWebsite/ConorFoxWebsite/Views/Account/Register.cshtml
@@ -2,51 +2,30 @@
 
 @{
     ViewBag.Title = "Register Staff";
-}
+    <script type="text/javascript">
+        $("#registerMenu").addClass("active");
+        $("#loginMenu").removeClass("active");
 
+    </script>
+}
+<br />
 <h2>Create a New Account</h2>
 <p>
-    Use the form below to create a new staff member account. 
+    Use the form below to create a new student account. 
 </p>
 <p>
     Passwords are required to be a minimum of @Membership.MinRequiredPasswordLength characters in length.
 </p>
 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>
 
 @using (Html.BeginForm()) {
-    @Html.ValidationSummary(true, "Staff account creation was unsuccessful. Please correct the errors and try again.")
+    @Html.ValidationSummary(true, "Student account creation was unsuccessful. Please correct the errors and try again.")
     <div>
         <fieldset>
-            <legend>Staff Account Information</legend>
-
-            
-            <div class="editor-label">
-                @Html.LabelFor(m => m.Title)
-            </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(m => m.Title)
-                @Html.ValidationMessageFor(m => m.Title)
-            </div>
-
-            <div class="editor-label">
-                @Html.LabelFor(m => m.Forename)
-            </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(m => m.Forename)
-                @Html.ValidationMessageFor(m => m.Forename)
-            </div>
-
-            <div class="editor-label">
-                @Html.LabelFor(m => m.Surname)
-            </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(m => m.Surname)
-                @Html.ValidationMessageFor(m => m.Surname)
-            </div>
+            <legend>Student Account Information</legend>
 
             <div class="editor-label">
                 @Html.LabelFor(m => m.Email)
