--- a/ConorFoxWebsite/ConorFoxWebsite/Views/Home/About.cshtml
+++ b/ConorFoxWebsite/ConorFoxWebsite/Views/Home/About.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewBag.Title = "About Us";
 }
-
-<h2>About</h2>
-<p>
-     Put content here.
-</p>
+  <div class="jumbotron">
+        <h1>Timetabling Web Application</h1>
+        <p>Welcome to the timtabling web application. Within this Site you will be able to view in detail elements of your timetable including full timetables and individual events</p>
+        <p><a href="#" class="btn btn-primary btn-lg" role="button">Learn more »</a></p>
+      </div>
