--- a/ConorFoxWebsite/ConorFoxWebsite/Views/Shared/_StartLayout.cshtml
+++ b/ConorFoxWebsite/ConorFoxWebsite/Views/Shared/_StartLayout.cshtml
@@ -16,8 +16,8 @@
                 <div class="navbar-collapse collpase">
                     <ul class="nav navbar-nav">
                         <li id="loginMenu" class="active">@Html.ActionLink("Log In", "LogOn", "Account")</li>
-                        <li id="SummaryMenu"> @Html.ActionLink("Today", "Summary", "Home")</li>
-                        <li>@Html.ActionLink("My Timetable", "Timetable", "Home")</li>
+                        <li id="registerMenu">@Html.ActionLink("Register", "Register", "Account")</li>
+                        <li id="administrationMenu">@Html.ActionLink("Administrators", "Administration", "Account")</li>
                     </ul>
                 </div>
             </div>
