--- a/ConorFoxWebsite/ConorFoxWebsite/Views/Shared/_StartLayout.cshtml
+++ b/ConorFoxWebsite/ConorFoxWebsite/Views/Shared/_StartLayout.cshtml
@@ -15,9 +15,8 @@
             <div class="navbar-header">
                 <div class="navbar-collapse collpase">
                     <ul class="nav navbar-nav">
-                        <li id="loginMenu" class="active">@Html.ActionLink("Log In", "LogOn", "Account")</li>
-                        <li id="registerMenu">@Html.ActionLink("Register", "Register", "Account")</li>
-                        <li id="administrationMenu">@Html.ActionLink("Administrators", "Administration", "Account")</li>
+                        <li id="loginMenu" class="active">@Html.ActionLink("Log In", "StudentLogOn", "Account")</li>
+                        <li id="administrationMenu">@Html.ActionLink("Administrators", "StaffLogOn", "Account")</li>
                     </ul>
                 </div>
             </div>
