--- a/ConorFoxWebsite/ConorFoxWebsite/Views/Account/StaffLogOn.cshtml
+++ b/ConorFoxWebsite/ConorFoxWebsite/Views/Account/StaffLogOn.cshtml
@@ -6,16 +6,14 @@
 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
-
-@Html.ValidationSummary(true, "Login was unsuccessful. Please correct the errors and try again.")
+<script type="text/javascript">
+    $("#loginMenu").removeClass("active");
+    $("#administrationMenu").addClass("active");
+</script>
 
 @using (Html.BeginForm()) {
 <div class="container">
-    <h2>Log On</h2>
-    <p>
-      Please enter your user name and password. @Html.ActionLink("Register", "Register") if you don't have an account.
-   </p>
+    <h2>Staff Log On</h2>
 </div>
         <br />
          
@@ -50,7 +48,7 @@
             <p>
                 <input type="submit" value="Log On" />
             </p>
-
+    @Html.ValidationSummary(true, "Login was unsuccessful. Please correct the errors and try again.")
 
          
 }
